--- a/app/src/main/res/layout/app_bar_navigation.xml
+++ b/app/src/main/res/layout/app_bar_navigation.xml
@@ -20,7 +20,9 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include layout="@layout/content_navigation" />
+    <include
+        layout="@layout/content_navigation"
+        android:elevation="25dp" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
