--- a/app/src/main/res/layout/atualizar_fazenda.xml
+++ b/app/src/main/res/layout/atualizar_fazenda.xml
@@ -88,7 +88,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             tools:ignore="LabelFor" />
 
         <TextView
@@ -106,7 +106,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             tools:ignore="LabelFor" />
 
         <TextView
@@ -124,7 +124,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="numberDecimal"
             tools:ignore="LabelFor" />
 
         <TextView
