Atualizando os dados da fazenda

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -68,6 +68,9 @@
             android:name="id"
             app:argType="string"
             app:nullable="true" />
+        <action
+            android:id="@+id/from_atualizar_to_Apresentar"
+            app:destination="@id/nav_fazenda" />
     </fragment>
     <fragment
         android:id="@+id/cadastroFluxoCaixaFrag"
