--- a/app/src/main/res/layout/activity_atividades.xml
+++ b/app/src/main/res/layout/activity_atividades.xml
@@ -40,7 +40,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerAtividades"
+        android:id="@+id/recyclerFazendas"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="48dp" />
