--- a/app/src/main/res/layout/cadastro_inventario.xml
+++ b/app/src/main/res/layout/cadastro_inventario.xml
@@ -39,7 +39,26 @@
             tools:ignore="LabelFor" />
 
         <Spinner
-            android:id="@+id/spinner"
+            android:id="@+id/spinnerTipoItem"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            android:background="@drawable/spinner_shape"
+            android:entries="@array/tiposItem"
+            android:textAlignment="center" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:fontFamily="@font/roboto"
+            android:text="@string/atividade_intro"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
+
+        <Spinner
+            android:id="@+id/spinnerAtividadeItem"
             android:layout_width="300dp"
             android:layout_height="48dp"
             android:layout_gravity="center"
@@ -51,28 +70,10 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
             android:fontFamily="@font/roboto"
-            android:text="@string/atividade_intro"
-            android:textColor="@color/colorPrimary"
-            android:textSize="16sp" />
-
-        <EditText
-            android:id="@+id/editText26"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:ems="10"
-            android:importantForAutofill="no"
-            android:inputType="textPersonName"
-            tools:ignore="LabelFor" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:fontFamily="@font/roboto"
             android:text="@string/quantidade_inicial_intro"
             android:textColor="@color/colorPrimary"
             android:textSize="16sp" />
+
 
         <EditText
             android:id="@+id/editText27"
