--- a/app/src/main/res/layout/cadastro_inventario.xml
+++ b/app/src/main/res/layout/cadastro_inventario.xml
@@ -20,7 +20,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/editText18"
+            android:id="@+id/nomeItemInventario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -51,7 +51,7 @@
 
 
         <EditText
-            android:id="@+id/editText27"
+            android:id="@+id/quantidadeInicialItemInventario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -70,7 +70,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/editText28"
+            android:id="@+id/valorUnitarioItemInventario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -89,7 +89,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/editText29"
+            android:id="@+id/anoCompraItemInventario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -108,7 +108,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/editText30"
+            android:id="@+id/reformaItemInventario"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -127,7 +127,7 @@
             android:textSize="16sp" />
 
         <EditText
-            android:id="@+id/editText31"
+            android:id="@+id/quantidadeAtualItemCadastro"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
@@ -176,7 +176,7 @@
             android:layout_height="16dp" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/salvarItemInventario"
             android:layout_width="250dp"
             android:layout_height="48dp"
             android:layout_gravity="center"
