mexendo nas questões de cadastro

--- a/app/src/main/res/layout/atualizar_fazenda.xml
+++ b/app/src/main/res/layout/atualizar_fazenda.xml
@@ -44,7 +44,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="number|numberDecimal"
             tools:ignore="LabelFor" />
 
         <TextView
@@ -126,7 +126,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="number|numberDecimal"
             tools:ignore="LabelFor" />
 
         <TextView
@@ -143,8 +143,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:ems="10"
+            android:inputType="number|numberDecimal"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
             tools:ignore="LabelFor" />
 
         <TextView
@@ -162,7 +162,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="number|numberDecimal"
             tools:ignore="LabelFor" />
 
         <TextView
@@ -180,7 +180,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="number|numberDecimal"
             tools:ignore="LabelFor" />
 
         <TextView
@@ -198,7 +198,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="number|numberDecimal"
             tools:ignore="LabelFor" />
 
         <TextView
@@ -216,7 +216,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="number|numberDecimal"
             tools:ignore="LabelFor" />
 
         <TextView
@@ -234,7 +234,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="number|numberDecimal"
             tools:ignore="LabelFor" />
 
         <TextView
@@ -252,7 +252,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="number|numberDecimal"
             tools:ignore="LabelFor" />
 
         <TextView
@@ -270,7 +270,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="number|numberDecimal"
             tools:ignore="LabelFor" />
 
         <TextView
@@ -288,7 +288,7 @@
             android:layout_marginBottom="12dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="number|numberDecimal"
             tools:ignore="LabelFor" />
 
         <Button
