--- a/app/src/main/res/layout/cadastro_inventario.xml
+++ b/app/src/main/res/layout/cadastro_inventario.xml
@@ -57,7 +57,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="number|numberDecimal"
             tools:ignore="LabelFor" />
 
         <TextView
@@ -76,7 +76,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="number|numberDecimal"
             tools:ignore="LabelFor" />
 
         <LinearLayout
@@ -123,7 +123,7 @@
             android:layout_marginBottom="8dp"
             android:ems="10"
             android:importantForAutofill="no"
-            android:inputType="textPersonName"
+            android:inputType="number|numberDecimal"
             tools:ignore="LabelFor" />
 
 
@@ -150,7 +150,7 @@
                 android:layout_marginBottom="8dp"
                 android:ems="10"
                 android:importantForAutofill="no"
-                android:inputType="textPersonName"
+                android:inputType="date"
                 android:text="@string/ano_atual"
                 tools:ignore="LabelFor" />
 
@@ -170,7 +170,7 @@
                 android:layout_marginBottom="8dp"
                 android:ems="10"
                 android:importantForAutofill="no"
-                android:inputType="textPersonName"
+                android:inputType="number|numberDecimal"
                 android:text="0"
                 tools:ignore="LabelFor" />
         </LinearLayout>
