salvando itens do fluxo de caixa

--- a/app/src/main/res/layout/cadastro_fluxo_caixa.xml
+++ b/app/src/main/res/layout/cadastro_fluxo_caixa.xml
@@ -54,7 +54,7 @@
             tools:ignore="LabelFor" />
 
         <ToggleButton
-            android:id="@+id/toggleButton"
+            android:id="@+id/entradaSaidaButton"
             android:layout_width="250dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
