salvando itens do fluxo de caixa

--- a/app/src/main/res/layout/cadastro_fluxo_caixa.xml
+++ b/app/src/main/res/layout/cadastro_fluxo_caixa.xml
@@ -147,6 +147,7 @@
             android:inputType="number|numberDecimal"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
+            android:text="0"
             tools:ignore="LabelFor" />
 
         <Switch
