--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -81,6 +81,9 @@
             android:name="id"
             app:argType="string"
             app:nullable="true" />
+        <action
+            android:id="@+id/from_cadastrofluxo_to_nav_fazenda"
+            app:destination="@id/nav_fazenda" />
     </fragment>
     <fragment
         android:id="@+id/cadastroInventarioFrag"
